--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "29b59245",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "4    automatic   sedan       black     NaN  2019-04-02           28  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,15 +152,15 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "\n",
-    "df = pd.read_csv('../vehicles_us.csv')  # Ajusta la ruta si es necesario\n",
+    "df = pd.read_csv('../vehicles_us.csv')  # Cargamos el archivo\n",
     "\n",
-    "df.head()  # Verifica que cargó bien\n"
+    "df.head()  # Verificamos\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "979bf38d",
+   "execution_count": 7,
+   "id": "5f665cd2",
    "metadata": {},
    "outputs": [
     {
@@ -1010,8 +1010,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cebf3f3c",
+   "execution_count": 8,
+   "id": "63e49226",
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28424263",
+   "id": "6e97c114",
    "metadata": {},
    "outputs": [],
    "source": []
